ingress/prod-devops-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-devops-app-ingress
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
    - host: prod.devops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-service
                port:
                  number: 80
